// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewHeading renders a Heading 1`] = `
<div
  className="display-flex flex-align-end margin-top-6 margin-bottom-3"
>
  <Heading
    className="flex-fill margin-right-1"
    level="2"
    size="2"
  >
    Who is taking leave?
  </Heading>
</div>
`;

exports[`ReviewHeading when editHref is defined renders with an edit link 1`] = `
<div
  className="display-flex flex-align-end margin-top-6 margin-bottom-3"
>
  <Heading
    className="flex-fill margin-right-1"
    level="2"
    size="2"
  >
    Who is taking leave?
  </Heading>
  <Link
    href="/name"
  >
    <a
      aria-label="Edit: Who is taking leave?"
      className="usa-link margin-0"
    >
      Edit
    </a>
  </Link>
</div>
`;
